--- a/style/style.css
+++ b/style/style.css
@@ -95,8 +95,26 @@
   padding: 0;
 }
 
+html::-webkit-scrollbar {
+  width: 6px;
+  background-color: #FFECFB;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  height: 6px;
+  background-color: #a54bb1;
+  -webkit-box-shadow: 5px 5px 5px -5px rgb(79, 111, 255) inset;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: rgba(148, 147, 155, 0.4823529412);
+}
+
 html,
 body {
+  scrollbar-color: #6969dd #e0e0e0;
+  scrollbar-width: thin;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
   min-width: 320px;
@@ -538,7 +556,7 @@ li {
 @media (max-width: 930px) {
   .suptitle {
     font-size: 18px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 }
 
@@ -559,7 +577,10 @@ li {
 }
 @media (max-width: 690px) {
   .about__img {
-    padding: 0 0 30px;
+    padding: 30px 0 0;
+    margin: 0 auto;
+    max-width: 350px;
+    min-width: auto;
   }
 }
 .about__girl-img {
@@ -595,7 +616,8 @@ li {
 }
 @media (max-width: 690px) {
   .about__wrapper {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    align-items: flex-start;
   }
 }
 .about__text-content {
@@ -639,7 +661,7 @@ li {
 }
 @media (max-width: 768px) {
   .modify-title {
-    font-size: 35px;
+    font-size: 32px;
   }
 }
 
@@ -668,6 +690,154 @@ li {
 }
 .btn-arrow:hover::before {
   transform: translate(23px, -50%);
+}
+
+.shop {
+  padding: 30px 0 200px;
+  background: url("../img/shop/shop-bg.png") no-repeat center;
+  background-size: cover;
+}
+@media (max-width: 1100px) {
+  .shop {
+    padding: 30px 0 100px;
+  }
+}
+.shop__wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.shop__item {
+  flex: 0 1 50%;
+  margin-bottom: 100px;
+}
+.shop__item:nth-child(2n+1) {
+  padding-right: 5px;
+}
+.shop__item:nth-child(2n) {
+  padding-left: 5px;
+}
+@media (max-width: 940px) {
+  .shop__item {
+    flex: 0 1 100%;
+  }
+}
+@media (max-width: 940px) {
+  .shop__item {
+    margin-bottom: 50px;
+  }
+  .shop__item:last-child {
+    margin-bottom: 0;
+  }
+}
+.shop__title {
+  margin-bottom: 32px;
+  line-height: 150%;
+}
+.shop__title--red {
+  display: inline-block;
+  position: relative;
+}
+.shop__title--red::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: linear-gradient(268.82deg, #2E2594 0%, #F73B6C 97.99%);
+}
+.shop__text {
+  max-width: 700px;
+}
+.shop__item-product {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 600px) {
+  .shop__item-product {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+.shop__product-img {
+  margin-right: 40px;
+  min-width: 120px;
+}
+@media (max-width: 1050px) {
+  .shop__product-img {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 940px) {
+  .shop__product-img {
+    margin-right: 50px;
+  }
+}
+@media (max-width: 600px) {
+  .shop__product-img {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
+.shop__product-content {
+  max-width: 270px;
+}
+.shop__product-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 136%;
+  color: #2E2594;
+  margin-bottom: 15px;
+}
+@media (max-width: 1000px) {
+  .shop__product-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+}
+.shop__stars-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+@media (max-width: 1000px) {
+  .shop__stars-wrapper {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 600px) {
+  .shop__stars-wrapper {
+    justify-content: center;
+  }
+}
+.shop__review {
+  font-size: 18px;
+  line-height: 133%;
+  color: #332B5C;
+  margin-left: 12px;
+}
+.shop__price-wrapper {
+  margin-bottom: 15px;
+}
+.shop__new-prise {
+  color: #B53071;
+}
+.shop .prise {
+  font-size: 24px;
+  line-height: 100%;
+  font-weight: 700;
+}
+@media (max-width: 1000px) {
+  .shop .prise {
+    font-size: 22px;
+  }
+}
+.shop__old-prise {
+  margin-left: 25px;
+  text-decoration-line: line-through;
+  color: #94939B;
 }
 
 .streamer {
@@ -898,12 +1068,34 @@ li {
   line-height: 125%;
   color: #B53071;
   font-weight: 700;
-  margin-top: 65px;
 }
 @media (max-width: 968px) {
   .testimonial__permission {
     font-size: 20px;
+  }
+}
+.testimonial__slider-text-wrapper {
+  display: block;
+  margin-top: 65px;
+}
+@media (max-width: 968px) {
+  .testimonial__slider-text-wrapper {
     margin-top: 35px;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 968px) {
+  .testimonial__envelop {
+    margin-right: 30px;
+  }
+}
+.testimonial__mibile-content-img {
+  display: none;
+}
+@media (max-width: 768px) {
+  .testimonial__mibile-content-img {
+    display: block;
   }
 }
 .testimonial__gamer {
