--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,129 @@
+
+.paralax {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  &__item {
+    fill: #FFA2A4;
+    position: absolute;
+    @media (max-width: 768px) {
+      opacity: 0.3;
+    }
+    &--1 {
+      right: 15%;
+      top: 18%;
+    }
+    &--2 {
+      top: 20%;
+      left: 4%;
+    }
+    &--3 {
+      right: 10%;
+      top: 40%;
+    }
+    &--4 {
+      left: 40%;
+      top: 41%;
+    }
+    &--5 {
+      position: absolute;
+      left: 40%;
+      top: 18%;
+      fill: #fff;
+      opacity: 0.5;
+    }
+    &--6 {
+      right: 20%;
+      bottom: 15%;
+    }
+    &--7 {
+      left: 20%;
+      bottom: 15%;
+    }
+  }
+}
+
+.paralax {
+
+		&__item {
+		}
+
+		&__item--21 {
+      left: 35%;
+      bottom: 40%;
+		}
+
+		&__item--22 {
+      top: 20%;
+      left: 10%;
+		}
+
+		&__item--23 {
+      left: 38%;
+      top: 20%;
+		}
+
+		&__item--24 {
+      right: 20%;
+      bottom: 48%;
+		}
+
+		&__item--25 {
+      top: 25%;
+      right: 10%;
+		}
+
+		&__item--26 {
+      right: 10%;
+      bottom: 10%;
+		}
+    &__item--27 {
+      left: 10%;
+      bottom: 0;
+		}
+}
+
+
+.paralax {
+
+  &__item {
+  }
+
+  &__item-31 {
+    top: -10%;
+    left: 20%;
+  }
+
+  &__item-32 {
+    left: 4%;
+    top: -5%;
+  }
+
+  &__item-33 {
+    right: 4%;
+    top: 55%;
+  }
+
+  &__item-34 {
+    top: 25%;
+    left: 5%;
+  }
+
+  &__item-35 {
+    top: 25%;
+    right: 5%;
+  }
+
+  &__item-36 {
+    top: 50%;
+    right: 20%;
+  }
+}
+//////////////paralax
 #preloader {
   position: fixed;
   top: 0;
@@ -387,7 +513,7 @@ li {
 //////////////////////////////////////////////////
 .main-page {
   padding: 85px 0 20px ;
-
+  z-index: 1;
   position: relative;
   background: url('../img/header/header-bg1.png') no-repeat center ;
   background-size: cover;
@@ -579,6 +705,7 @@ li {
   background: url('../img/about/about-bg.png') no-repeat center;
   background-size: cover; 
 
+  position: relative;
   @media (max-width: 1000px) {
     padding: 35px 0 60px;
   }
@@ -872,10 +999,12 @@ li {
 
 ///////////////////////////////////////////
 .streamer {
+  z-index: 1;
   padding: 30px 0;
   background: url('../img/streamer/streamer-bg.png') no-repeat center;
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
   &__text-wrapper {
     text-align: center;
     max-width: 500px;
@@ -1099,6 +1228,7 @@ li {
 
   &__swiper{
     padding-bottom: 60px;
+    overflow:unset;
   }
 
   &__title {
@@ -1127,9 +1257,30 @@ li {
   }
 
   &__content-img {
+    position: relative;
     min-width: 350px;
     @media (max-width: 768px) {
       display: none;
+    }
+    &::before{
+      content: '';
+      z-index: -1;
+      position: absolute;
+      height: 188px;
+      width: 210px;
+      background: url('../img/dots.svg') no-repeat;
+      left: -150px;
+      top: 0;
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      height: 50px;
+      width: 50px;
+      background: url('../img/joistick.svg') center no-repeat;
+      left: -150px;
+      bottom: 50px;
+      left: 20px;
     }
   }
 
